/**
 * Demo Service
 *
 * 示例微服务
 */
syntax = "proto3";
// 生成代码文件保存路径
option go_package = "./user";

/**
 * 处理演示服务的 RPC 接口
 */
service DemoService {
  /// 问候服务接口1，通过客户端传入用户名返回对应的问候文本
  rpc SayHello(DemoRequest) returns (DemoResponse) {}
  /// 问候服务接口2，根据客户端传入用户ID返回对应的问候文本
  rpc SayHelloByUserId(UserRequest) returns (DemoResponse) {}
}

/**
 * 示例请求对象1
 */
message DemoRequest {
  string name = 1;  /// 用户名
}

/**
 * 示例请求对象2
 */
message UserRequest {
  string id = 1; /// 用户 ID
}

/**
 * 示例响应对象
 */
message DemoResponse {
  string text = 1;  /// 问候文本
}